# zoo-interactive

./: .gitignore  Cargo.toml  DEPLOYMENT.md  HEROKU-QUICKSTART.md  INICIAR-PROJETO-DOCKER-LINUX.md  INICIAR-PROJETO-DOCKER.md  Procfile  README.md  app.json  docker-compose.dev.yml  docker-compose.yml  heroku.yml
backend/: .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.heroku  build.sh
backend/src/: db.rs  main.rs
backend/src/handlers/: animal_cares.rs  animals.rs  cares.rs  mod.rs
backend/src/models/: animal.rs  animal_care.rs  cares.rs  mod.rs
docs/: DEPLOYMENT-CHECKLIST.md  DEVELOPMENT_LOG.md  HEROKU-DEPLOYMENT.md  README.md  VALIDATION-TEST-RESULTS.md  animal-create-handler-log.md  changelog-database-integration.md  changelog-frontend-integration.md  changelog-mysql-switch.md  changelog-tiberius-sql-server.md  docker-quick-reference.md  docker-rebuild-guide.md  docker-startup-fix-log.md  docker-startup-fix-summary.md  frontend-errors-fix-log.md  implementation-summary.md  issue-01-git-authentication.md  issue-02-git-branch-merge.md  issue-03-rust-edition-2024.md  issue-04-docker-binary-not-found.md  issue-05-frontend-dockerfile-path.md  issue-06-cors-blocking.md  issue-07-handler-no-return.md  issue-08-fetch-url-malformed.md  issue-09-docker-no-hot-reload.md  issue-10-wrong-compose-file.md  react-datepicker-docker-issue.md  session-log-2025-11-22.md  todo.txt
frontend/: .env.example  .env.production  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  static.json
scripts/: deploy-heroku.sh  test-heroku-build.sh
(+22 files in other folders)
