[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiberius = { version = "0.12", features = ["chrono", "tds73"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower-http = { version = "0.6.6", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde"] }
